--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Cloudnet data portal
-email: actris-cloudnet-feedback@fmi.fi
+email: actris-cloudnet@fmi.fi
 
 # Build settings
 theme: jekyll-theme-primer
