Add `typos` to `pre-commit`

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -17,3 +17,8 @@ repos:
     hooks:
       - id: prettier
         exclude: ^_layouts/
+  - repo: https://github.com/crate-ci/typos
+    rev: v1.23.5
+    hooks:
+      - id: typos
+        args: ["--force-exclude"]
